cmake_minimum_required(VERSION 3.21)
project(UNP C)

set(CMAKE_C_STANDARD 99)

add_executable(UNP01 main.c )
add_executable(UNP02 TIME/client.c)
add_executable(UNP03 TIME/server.c)
add_executable(UNP04 ECHO/EchoClient.c)
add_executable(UNP05 ECHO/EchoServer.c)
add_executable(UNP06 CHAT/chat-client.c)
add_executable(UNP07 CHAT/chat-server.c)
add_executable(UNP08 CONCURRENT\ ECHO/EchoClient01.c)
add_executable(UNP09 CONCURRENT\ ECHO/EchoClient02.c)
add_executable(UNP10 CONCURRENT\ ECHO/EchoServer.c)
add_executable(UNP11 CONCURRENT\ CHAT/chat-client-01.c)
add_executable(UNP12 CONCURRENT\ CHAT/chat-client-02.c)
add_executable(UNP13 CONCURRENT\ CHAT/chat-server.c)
add_executable(UNP14 EXAMPLE/bzero_str.c)
add_executable(UNP15 EXAMPLE/bzero_int.c)
add_executable(UNP16 EXAMPLE/bcmp.c)
add_executable(UNP17 EXAMPLE/bcopy.c)
add_executable(UNP18 EXAMPLE/memset_str.c)
add_executable(UNP19 EXAMPLE/memset_int.c)
add_executable(UNP20 EXAMPLE/memcmp.c)
add_executable(UNP21 EXAMPLE/memcpy.c)
add_executable(UNP22 EXAMPLE/ip_manu.c)
add_executable(UNP23 EXAMPLE/inet_aton.c)
add_executable(UNP24 EXAMPLE/ip_validator.c)
add_executable(UNP25 EXAMPLE/inet_ntoa.c)
add_executable(UNP26 EXAMPLE/inet_pton.c)
add_executable(UNP27 LAB\ TEST\ 1/server.c)
add_executable(UNP28 LAB\ TEST\ 1/client.c)
add_executable(UNP29 IO\ MUX/server.c)
add_executable(UNP30 IO\ MUX/client.c )
add_executable(UNP31 IO\ ECHO/client.c )
add_executable(UNP32 IO\ ECHO/server.c )